--- a/src/assets/css/widget.styl
+++ b/src/assets/css/widget.styl
@@ -322,6 +322,25 @@ $primary-background-color = #d8e8fa;
       border: 0 none;
       border-top: 1px solid #d3d3d3;
     }
+
+    .wg-random-code {
+      .random-code {
+        outline: 0;
+        font-family: 'Helvetica Neue';
+        letter-spacing: 5px;
+        font-style: italic;
+        font-size: 20px;
+        height: 36px;
+        height: 40px;
+        line-height: 38px;
+        width: 110px;
+        margin-left: 10px;
+        cursor: pointer;
+        border: none;
+        user-select: none;
+        font-weight: bold;
+      }
+    }
   }
 
   .wg-wechat {
