--- a/src/assets/css/widget.styl
+++ b/src/assets/css/widget.styl
@@ -20,16 +20,23 @@ $primary-background-color = #d8e8fa;
     background-repeat: no-repeat;
     background-position: 0 0;
     background-size: 100% 100%;
+  }
 
-    img {
-      vertical-align: top;
-    }
+  img {
+    vertical-align: top;
+  }
 
-    .widget-empty {
-      background-image: url('../assets/img/form_empty.png');
-      background-repeat: no-repeat;
-      background-position: 50%;
-      background-size: 66%;
+  .widget-empty {
+    background-image: url('../assets/img/form_empty.png');
+    background-repeat: no-repeat;
+    background-position: 50%;
+    background-size: 66%;
+  }
+
+  .custom-popup-fixed {
+    .widget-form-list {
+      min-height: 200px;
+      padding-bottom: 36px;
     }
   }
 
