🌈style: 新增动画样式

--- a/src/assets/css/index.styl
+++ b/src/assets/css/index.styl
@@ -182,3 +182,23 @@ $primary-background-color = #ecf5ff;
     transform: translateX(-50%);
   }
 }
+
+@keyframes yun-breathlamp {
+  0% {
+    transform: scale(0.8);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes yun-fade {
+  0% {
+    opacity: 0.6;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
