--- a/src/assets/css/index.styl
+++ b/src/assets/css/index.styl
@@ -183,7 +183,7 @@ $primary-background-color = #ecf5ff;
   }
 }
 
-@keyframes yun-breathlamp {
+@keyframes breathlamp {
   0% {
     transform: scale(0.8);
   }
@@ -193,7 +193,7 @@ $primary-background-color = #ecf5ff;
   }
 }
 
-@keyframes yun-fade {
+@keyframes fade {
   0% {
     opacity: 0.6;
   }
