🎈perf: 动画设计优化

--- a/src/assets/css/config.styl
+++ b/src/assets/css/config.styl
@@ -99,6 +99,15 @@
       padding-bottom: 10px;
     }
   }
+
+  .animation-config {
+    .animation-demo {
+      text-align: center;
+      border-radius: 20px;
+      color: #fff;
+      background-color: rgb(64, 158, 255);
+    }
+  }
 }
 
 .quill-editor {
