✨ feat: 新增倒计时组件

--- a/src/assets/css/widget.styl
+++ b/src/assets/css/widget.styl
@@ -489,4 +489,29 @@ $primary-background-color = #d8e8fa;
       }
     }
   }
+
+  .wg-countdown {
+    font-size: 14px;
+    color: #333;
+    padding: 5px;
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    background-size: 100% 100%;
+
+    .countdown-timeblock {
+      display: inline-block;
+      text-align: center;
+      padding: 5px;
+      background-color: #e6e6e6;
+      font-size: 16px;
+      border-radius: 5px;
+      color: #333;
+      min-width: 30px;
+      margin: 5px;
+    }
+
+    .countdown-empty {
+      color: #ff0000;
+    }
+  }
 }
